<resources>

    <string name="app_name">Evolution</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark">Bookmark </string>
    <string name="bookmark_plus">Bookmark added</string>
    <string name="bookmark_remove">Bookmark deleted</string>
    <string name="bookmark_add">Add to bookmarks</string>
    <string name="delete_t">Delete a bookmark?</string>
    <string name="delete_s">The action cannot be canceled!</string>
    <string name="error_t">Access error</string>
    <string name="error_s">This could be due to a lack of Internet connection . Please check if Your device is connected to the Internet . Internet or Wi-Fi network and try reloading the web page</string>
    <string name="reload">Reload</string>
    <string name="oops_t">Oops! Nothing</string>
    <string name="oops_s">Make a new bookmark and it will appear here. To do this, go to the desired site, go to the menu, click on <b>Add to bookmarks</b></string>
    <string name="ota_t">An update is available</string>
    <string name="ota_s">In the new version, the developer made improvements and changes. Updating the app is recommended for downloading and installing each user of this SOFTWARE. Download the update?</string>
    <string name="search_bar">Search in Google</string>
    <string name="speech_prompt">Say something &#8230;</string>
    <string name="speech_not_supported">Sorry! Your device does not support voice input</string>
    <string name="img_chooser">Selected image</string>
    <string name="download_toast">File download</string>
    <string name="sms_no">SMS app not installed</string>
    <string name="bottom_sheet">Selected action</string>
    <string name="send_image">Send image</string>
    <string name="copy_link">Copy link</string>
    <string name="copy">Link copied</string>
    <string name="exit_t">You want to get out?</string>
    <string name="exit_s">Do you intend to go out? When you exit, all actions will be stopped and will not be saved in the browser.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="download_image">Download image</string>
    <string name="download">Downloading an image</string>
    <string name="settings">Settings</string>
    <string name="personalization">Personalization</string>
    <string name="theme">Themes</string>
    <string name="night_theme">Night theme</string>
    <string name="night_theme_sum">Changes the theme only for the app itself</string>
    <string name="orientation_t">Disable autorotate</string>
    <string name="orientation_s">After disabling auto- rotation of the screen , the app will always open in portrait mode</string>
    <string name="status_t">Status bar</string>
    <string name="status_s">Hide the status bar for easier viewing of content</string>
    <string name="screen_t">Do not disable the display</string>
    <string name="screen_s">The display will always be on regardless of the screen timeout settings</string>
    <string name="incognito_t">Incognito</string>
    <string name="incognito_s">When this mode is enabled, Your data and browsing history are not saved in the apps memory and on the device, respectively</string>
    <string name="incognito_descp">Incognito mode is enabled. To disable it go to settings</string>
    <string name="geo_t">Location determination</string>
    <string name="geo_s">If you disable access to your location, sites will not be able to detect, for example, the weather in Your city, etc</string>
    <string name="main">Main</string>
    <string name="pc_t">The full version of the site</string>
    <string name="pc_s">Displaying the full version of the site</string>
    <string name="pass_t">Don\'t save passwords</string>
    <string name="pass_s">The browser will not store passwords in its cache</string>
    <string name="font_t">Large text size</string>
    <string name="font_s">If you cant see the displayed content clearly</string>
    <string name="zoom_t">Zoom web pages</string>
    <string name="zoom_s">When enabled, you can zoom in on objects on the site that you cant see well</string>
    <string name="lab">Laboratory</string>
    <string name="web_dark">Night web page</string>
    <string name="web_dark_sum">This option does not work on all devices and may color web pages incorrectly</string>
    <string name="fast_web">Turbo Mode</string>
    <string name="fast_web_sum">When this option is enabled the web page will load faster</string>
    <string name="fast_web_descp">Turbo mode is enabled. To disable it go to settings</string>
    <string name="web_cache">To cache a web page</string>
    <string name="web_cache_sum">When this option is enabled, the browser will cache the pages you have visited. When you visit the same page(s) again, the browser will load them from the cache</string>
    <string name="text_wrap_t">Text wrap</string>
    <string name="text_wrap_s">When enabled the browser will be able to transfer text when the web page is zoomed in</string>
    <string name="debug">For developers</string>
    <string name="img_no_load_t">Don\'t upload images</string>
    <string name="img_no_load_s">When enabled the browser will not load images and everything related to them</string>
    <string name="js_t">Java Script</string>
    <string name="js_s">Important! Use with caution! If JavaScript is disabled, some sites will not work correctly</string>
    <string name="cookie_t">Cookie</string>
    <string name="cookie_s">Without cookies, you will not be able to quickly log in to the site, and your settings will not be saved</string>
    <string name="licenses">Licenses software</string>
    <string name="сommunication">Communication</string>
    <string name="pda">4PDA</string>
    <string name="telegram">Telegram</string>
    <string name="github">GitHub</string>
    <string name="info">Information</string>
    <string name="about_t">About app</string>
    <string name="about_s">Version 7.0</string>

</resources>
