<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:icon="@drawable/palette_outline"
        android:title="@string/theme">

        <SwitchPreference
            android:title="@string/night_theme"
            android:summary="@string/night_theme_sum"
            android:key="night"/>

        <SwitchPreference
            android:title="@string/web_dark"
            android:summary="@string/web_dark_sum"
            android:key="@string/web_dark"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/palette_swatch_outline"
        android:title="@string/personalization">

        <SwitchPreference
            android:title="@string/orientation_t"
            android:summary="@string/orientation_s"
            android:key="@string/orientation_t" />

        <SwitchPreference
            android:title="@string/status_t"
            android:summary="@string/status_s"
            android:key="@string/status_t" />

        <SwitchPreference
            android:title="@string/screen_t"
            android:summary="@string/screen_s"
            android:key="@string/screen_t" />

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/image_outline"
        android:title="@string/main">

        <SwitchPreference
            android:title="@string/pc_t"
            android:summary="@string/pc_s"
            android:key="@string/pc_t" />

        <SwitchPreference
            android:title="@string/incognito_t"
            android:summary="@string/incognito_s"
            android:key="@string/incognito_t" />

        <SwitchPreference
            android:title="@string/geo_t"
            android:summary="@string/geo_s"
            android:key="@string/geo_t"
            android:defaultValue="true" />

        <SwitchPreference
            android:title="@string/pass_t"
            android:summary="@string/pass_s"
            android:key="@string/pass_t" />

        <SwitchPreference
            android:title="@string/font_t"
            android:summary="@string/font_s"
            android:key="@string/font_t" />

        <SwitchPreference
            android:title="@string/zoom_t"
            android:summary="@string/zoom_s"
            android:key="@string/zoom_t" />

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/code_tags"
        android:title="@string/debug">

        <SwitchPreference
            android:title="@string/js_t"
            android:summary="@string/js_s"
            android:key="@string/js_t"
            android:defaultValue="true"/>

        <SwitchPreference
            android:title="@string/cookie_t"
            android:summary="@string/cookie_s"
            android:key="@string/cookie_t"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/contacts_outline"
        android:title="@string/сommunication">

        <Preference
            android:title="@string/pda">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://4pda.ru/forum/index.php?showtopic=968330&amp;st=0#entry89584153" />

        </Preference>

        <Preference
            android:title="@string/telegram">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://t.me/dmitrylaas_ch" />

        </Preference>

        <Preference
            android:title="@string/github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/dmitrylaas/Evolution-Browser" />

        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/information_outline"
        android:title="@string/info">

        <Preference
            android:title="@string/licenses"
            android:key="licenses" />

        <Preference
            android:title="@string/about_t"
            android:summary="@string/about_s" >

            <intent
                android:action="android.settings.APPLICATION_DETAILS_SETTINGS"
                android:data="package:com.evo.browser" />

        </Preference>

    </PreferenceCategory>

</PreferenceScreen>