<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/turbo"
        android:title="@string/fast_web"
        android:icon="@drawable/ic_turbo"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item
        android:id="@+id/incognito"
        android:title="@string/incognito_t"
        android:icon="@drawable/ic_incognito"
        android:orderInCategory="2"
        app:showAsAction="always"/>

    <item
        android:id="@+id/star"
        android:title="@string/bookmark_add"
        android:orderInCategory="3" />

    <item
        android:id="@+id/copy_link"
        android:title="@string/copy_link"
        android:orderInCategory="4"/>

    <item
        android:id="@+id/setting"
        android:title="@string/settings"
        android:orderInCategory="5" />

</menu>